--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
-.App {
-  text-align: center;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  border-radius: 7px !important;
+}
+.hide {
+  display: none;
+}
+/* ToDo */
+
+.input_field {
+  padding: 7px 10px;
+  margin-bottom: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Table */
+table {
+  border-collapse: separate !important;
+}
+td,
+th {
+  border-width: 2px !important;
+  padding: 7px;
+}
+i {
+  padding: 5px 7px;
+  border-radius: 4px;
+  color: #fff;
+}
+button {
+  border: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* editform */
+#editform {
+  width: 47%;
+  margin: 25px 23px 0 0;
 }
